# oioio-ai

./: .env.example  .gitignore  Dockerfile  README.md  agent_cli.py  alembic.ini  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml  publish.yml
agent/: __init__.py  knowledge_agent.py  mcp_client.py
configs/: config.dev.yaml  config.prod.yaml  config.yaml
css/: styles.css
docs/deployment/: cicd.md  terraform.md
docs/howto/: api_backend.md  api_frontend.md  configuration.md  plugins.md  scheduling.md
js/: app.js
knowledge/: knowledge_about_dynamic_gap_identified_at_cycle_3_1748028004.md  knowledge_about_missing_knowledge_about_mcp_client_integration_1748028004.md  knowledge_about_missing_knowledge_about_mcp_performance_optimization_1748028004.md  knowledge_about_missing_knowledge_about_mcp_security_considerations_1748028004.md  knowledge_about_missing_knowledge_about_mcp_server_implementation_1748028004.md  mcp_protocol_basics_1748028004.md  mcp_server_architecture_overview_1748028004.md
migrations/: __init__.py  env.py
migrations/versions/: 001_initial_schema.py
oioio_mcp_agent/: __init__.py  __main__.py  cli.py  config.py  deploy.py
oioio_mcp_agent/api/: __init__.py  app.py
oioio_mcp_agent/config/: __init__.py  loader.py  schema.py
oioio_mcp_agent/core/: __init__.py  agent.py  plugin.py  scheduler.py
oioio_mcp_agent/engine/: __init__.py  flow.py  registry.py  task.py
oioio_mcp_agent/flows/: __init__.py  knowledge_flow.py
oioio_mcp_agent/tasks/: __init__.py  compile_knowledge.py  (+4 more)
(+34 files in other folders)
