[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oioio-mcp-agent"
version = "0.1.0"
description = "Durable background knowledge agent for MCP server knowledge accumulation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "OIOIO AI", email = "info@example.com" }
]
dependencies = [
    "prefect>=2.11.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.25.0",
    "click>=8.0.0",
    "docker-compose>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/nkbud/oioio-ai"
"Bug Tracker" = "https://github.com/nkbud/oioio-ai/issues"

[project.scripts]
mcp-agent = "oioio_mcp_agent.cli:main"

[tool.setuptools]
packages = ["oioio_mcp_agent"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"